Dependency cleanup